# lab25

./: CMakeLists.txt  README.md  concrete_loggers.cpp  concrete_loggers.h  logger.h  logger_factory.cpp  logger_factory.h  mainwindow.cpp  mainwindow.h
